[M3S02] Ex. 3 - Criar funcionalidade de cadastro de pokémon

--- a/Exercicios Trello/M3S02 _Ex3/src/main/resources/application.properties
+++ b/Exercicios Trello/M3S02 _Ex3/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pokedex
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+spring.jpa.hibernate.ddl-auto=update
+
 #irá gerar para aplicação
 logging.level.root=info
 #irá gerar para pacote
