--- a/Exercicios Trello/M3S03 _Ex5/DockerFile
+++ b/Exercicios Trello/M3S03 _Ex5/DockerFile
@@ -1,27 +1,22 @@
-#define imagem base
+FROM openjdk:17-jdk-slim-buster AS build
+# copia todos os arquivos da aplicação para a imagem
+
+COPY . .
+# Comando para tornar o mvnw em executável
+
+RUN chmod 700 mvnw
+# mesma função do install, gerar o .jar
+
+RUN ./mvnw clean package 
+
+# ******* Segunda parte da imagem
 FROM openjdk:17-jdk-slim-buster
 
-#define autores do dockerfile
-LABEL authors="NathaliaLanzendorf"
+# Cria uma pasta
+WORKDIR app
 
-#define caminho de execução da aplicação
-WORKDIR /app
+# Buscar o jar criado anteriormente
+COPY --from=build target/*.jar app.jar
 
-#copia os arquivos da pasta X para a pasta Y
-COPY target/hello-0.0.1-SNAPSHOT.jar app.jar
-
-#Seta variável de ambiente e substitui o valor da porta do application.properties
-ENV SERVER_PORT=8080
-
-#expõe a porta
-EXPOSE 8080
-
-#comando de execução da aplicação
-ENTRYPOINT java -jar app.jar
-#CMD ["java", "-jar", "app.jar"]
-
-#instala o java
-##RUN apt-get install openjdk
-
-##Executar 
-## docker build .
+# Executa o jar gerado
+ENTRYPOINT ["java", "-jar", "app.jar"]
